# multi-llm-rotator

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.bat
examples/: basic_usage.py  trading_bot_integration.py
multi_llm_rotator/: __init__.py  accounts.py  cli.py  rotator.py  service.py
multi_llm_rotator/providers/: __init__.py  claude.py  gemini.py  openai.py
